# interview_tickets_system

./: .env.example  Dockerfile  README.md  Tickets.postman_collection.json  docker-compose.yaml  entrypoint.sh  openapi_schema.json  pyproject.toml
app/: main.py  models.py  routes.py
app/core/: config.py  exceptions.py
app/crud/: comment.py  ticket.py
app/schemas/requests/: comments.py  tickets.py
app/schemas/responses/: base.py  ticket.py
app/tests/: test_ticket.py
migrations/versions/: 7f357833fd7c_initial_migration.py
